# sugoroku

./: .gitignore  Cargo.toml  README.md  install.sh  make_completion_script.sh  make_doc.sh
completion_script/: README.md
src/: .tags  activate.rs  area.rs  cli.rs  error.rs  example_player_list.toml  game_system.rs  lib.rs  main.rs  player_status.rs  preferences.rs  toml_interface.rs  user_interface.rs  world.rs  world_to_tex.rs
src/game_system/: area.rs  player_status.rs  toml_interface.rs  world.rs
src/user_interface/: tui.rs
src/user_interface/tui/: screen.rs  status.rs  transition.rs
sugoroku_examples/: README.md  player_list.toml  world_01.toml
