[package]
name = "sugoroku"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "sugoroku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde="1.0"
serde_derive = "1.0"
toml = "0.5"
termion = "1.5"
tui = { version = "0.18", default-features = false, features = ['termion'] }
unicode-width = "0.1"
clap = {version = "3.1", features = ["derive"]}
clap_complete = "3.1"
rand = "0.8"
