[package]
name = "sugoroku"
authors = ["Yuichi Ishida <yu1guana@gmail.com>"]
version = "0.1.0"
license-file = "LICENSE"
description = "Sugoroku"
repository = "https://github.com/yu1guana/sugoroku"
readme = "README.md"
edition = "2021"
publish = false
default-run = "sugoroku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.0.32", features = ["derive"]}
clap_complete = "4.0.7"
rand = "0.8.5"
serde="1.0.152"
serde_derive = "1.0.152"
termion = "1.5"
thiserror = "1.0.38"
toml = "0.5.10"
tui = { version = "0.19.0", default-features = false, features = ['termion'] }
unicode-width = "0.1.10"
